syntax = "proto3";

package pb;
import "barber/chain.proto";

option go_package = "barbershop/src/pb/barber";


message CreateChainRequest{
    string owner_id = 1;
    string name = 2;
}

message CreateChainResponse{
    Chain chain = 1;
}